# gszminer

./: Makefile.am  Makefile.in  README.md  api.c  cgminer.c  config.h.in  configure  configure.ac  driver-gridseed.h  gszminer.c  miner.h  usbutils.c  usbutils.h
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
ccan/: Makefile.in
compat/: Makefile.in
compat/jansson-2.5/: configure
compat/jansson-2.5/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
compat/libusb-1.0/autom4te.cache/: requests  traces.0
lib/: Makefile.in
